<resources>
    <string name="app_name">Task Manager</string>


    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget password?</string>
    <string name="signin">SignIn</string>
    <string name="registration">Registration</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_task_menu_page">TaskMenuPage</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="dob">D.O.B</string>
    <string name="register">Register</string>
    <string name="appdirect">APP DIRECT</string>
    <string name="title_activity_add_project">AddProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="title_activity_view_project">ViewProject</string>
    <string name="title_activity_view_task">ViewTask</string>
    <string name="title_activity_search_task">SearchTask</string>
    <string name="cancel">Cancel</string>


</resources>
