<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    android:background="@android:color/holo_blue_light"
    android:id="@+id/registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/holo_blue_dark"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration"
            android:id="@+id/textViewRegistration"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textViewName"
        android:layout_marginTop="87dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:typeface="serif"
        android:textStyle="italic" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txtusername"
        android:layout_alignTop="@+id/textViewName"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textViewPassword"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:typeface="serif" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignBaseline="@+id/textViewPassword"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirmpassword"
        android:id="@+id/textView"
        android:layout_below="@+id/textViewPassword"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:typeface="serif"
        ></TextView>

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtconpass"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dob"
        android:id="@+id/textViewDOB"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtdob"
        android:layout_alignBottom="@+id/textViewDOB"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_below="@+id/textViewDOB"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/register"
            android:id="@+id/buttonRegister"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_below="@+id/btnsave"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:layout_marginLeft="10dp"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_below="@+id/btncancel"
            android:layout_centerHorizontal="true" />

    </LinearLayout>



</RelativeLayout>
