<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main"
    android:focusable="false"
    android:clickable="false"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="TMS"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            >

            </TextView>

    </LinearLayout>

   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/textViewApp"
        android:theme="@style/Base.TextAppearance.AppCompat.Display1"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewUname"
        android:layout_toEndOf="@+id/textViewUname"
        android:layout_marginTop="42dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textViewUname"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="@dimen/abc_dialog_padding_material"
        android:layout_marginTop="134dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/buttonSignin"
        android:layout_toStartOf="@+id/buttonSignin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textViewPassword"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textViewUname"
        android:layout_alignLeft="@+id/textViewUname"
        android:layout_alignStart="@+id/textViewUname"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:ems="10"
        android:id="@+id/edt_password"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignLeft="@+id/edt_username"
        android:layout_alignStart="@+id/edt_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_above="@+id/textViewPassword"
        android:layout_alignLeft="@+id/textViewRegistration"
        android:layout_alignStart="@+id/textViewRegistration"
        android:id="@+id/edt_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgetpassword"
        android:id="@+id/textViewForgetPassword"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/buttonSignin"
        android:layout_toEndOf="@+id/buttonSignin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/buttonSignin"
        android:layout_below="@+id/textViewForgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/registration"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:id="@+id/textViewRegistration"
        android:layout_below="@+id/buttonSignin"
        android:layout_centerHorizontal="true"
        android:clickable="false"
 />

</RelativeLayout>
